# autofix-python-engine

./: .env.example  .gitignore  Changelog.md  KNOWN_ISSUES.md  LICENSE  MANIFEST.in  README.md  REVIEW_REQUEST.md  ROADMAP.md  SETUP.md  TESTING.md  __init__.py  autofix_cli.py  autofix_cli_interactive.py  autofix_python.py  cli.py  comprehensive_system_test.py  coverage.xml  debug_pylint.py  demo_script.py  direct_usage_demo.py  error_parser.py  final_validation_test.py  firestore_client.py  general_syntax_test.py  helper_functions.py  integration_test_runner.py  logging_utils.py  metrics.py  metrics_and_reports.py  mvp_validation_test.py  my_script.py  project_analysis_report.txt  pyproject.toml  pyproject.toml.broken  python_fixer.py  repo-artist-architecture.json  requirements.txt  rollback.py  run_all_demos.py  (+20 more)
api/: dependencies.py  main.py
api/models/: schemas.py
api/routers/: debug.py  fix.py  quality.py
api/services/: __init__.py  autofix_service.py  debugger_service.py  fallback_service.py  gemini_cache.py  gemini_service.py  memory_service.py  sandbox_executor.py  tools_service.py  variable_tracker.py
autofix/: __init__.py  __main__.py  autofix_cli_interactive.py  cli_parser.py  complex_test_script.py  constants.py  debug_firebase.py  enums.py  error_parser.py  fake_package_12345.py  fake_test_module.py  logging_utils.py  module_management.py  mvp_validation_test.py  nonexistent_module.py  nonexistent_package_xyz_456.py  python_fixer.py  rollback.py  simple_demo.py  some_nonexistent_package_that_causes_conflicts.py  super_rare_package_xyz_123.py  test_missing_import.py  test_module_import_issue.py  test_name_error.py  test_real_module_error.py  test_truly_missing.py  unified_syntax_handler.py  utils.py
autofix/cli/: __init__.py  autofix_cli_interactive.py  autofix_cli_interactive.py.backup  cli_parser.py
autofix/core/: base.py  base_handler.py  error_parser.py  python_fixer.py
autofix/handlers/: file_not_found_handler.py  import_error_handler.py  index_error_handler.py  key_error_handler.py  module_not_found_handler.py  syntax_error_handler.py  type_error_handler.py  value_error_handler.py  zero_division_handler.py
autofix/helpers/: helper_functions.py  logging_utils.py  rollback.py  spinner.py  utils.py
autofix/integrations/: firestore_client.py  metrics_collector.py
autofix_core/: __init__.py
autofix_core/application/: __init__.py
demos/: README.md  demo_contextual_debugging.py  demo_debugger_service.py  demo_index_error.py  demo_missing_module.py  demo_syntax_error.py  demo_syntax_fix.py  demo_type_error.py
docker/: .dockerignore  Dockerfile  Dockerfile.dev  docker-compose.yml
examples/: README.md  example1_syntax.py  example2_module.py  example3_indent.py
knowledge_base/: README.md
test_scripts/: index_error_test.py  module_not_found_test.py  syntax_error_test.py  test_attribute.py  test_imports.py  test_index.py  test_key.py  test_missing_module.py  test_missing_package.py  test_real_package.py  type_error_test.py
tests/: __init__.py  comprehensive_system_test.py  conftest.py  debug_pylint.py  final_validation_test.py  integration_test_runner.py  nonexistent_package.py  quick_test.py  simple_index_test.py  something_that_does_not_exist.py  test_api.py  test_attribute_error_demo.py  test_autofix_demo.py  test_autofix_service.py  test_bandit_analyzer.py  test_cache_versioning.py  test_clean_demo.py  test_cli.py  test_colorama_demo.py  test_complex_case.py  test_config.py  test_core_indexerror.py  test_custom_function.py  test_debug_router.py  test_debugger_service.py  test_fabric_demo.py  test_gemini_cache.py  test_gemini_direct.py  test_gemini_direct.py.skip  test_gemini_service.py  test_import.py  test_indentation_demo.py  test_index_error_demo.py  test_index_error_direct.py  test_indexerror_fresh.py  test_knowledge_builder.py  test_knowledge_builder_manual.py  test_logging_demo.py  test_logging_utils.py  test_memory_manual.py  (+27 more)
(+68 files in other folders)
